# lunary-py

./: .gitignore  README.md  event_queue.py  llmonitor.py  main.py  openai_utils.py  parsers.py  pyproject.toml  requirements.txt  setup.py  test.py  utils.py
.github/workflows/: auto-pr.yml
examples/: anthrophic.py  azure.py  basic.py  evals.py  functions.py  langchain-rag.py  multiple_cb.py  threads.py  tools.py
examples/azure-openai/: basic.py
examples/ibm/: basic.py  stream.py  tools.py  tools_stream.py
examples/openai/: audio.py  basic.py
llmonitor/: __init__.py  agent.py  consumer.py  event_queue.py  langchain.py  openai_utils.py  parsers.py  tags.py  users.py
lunary/: __init__.py  anthrophic.py  config.py  consumer.py  errors.py  event_queue.py  exceptions.py  ibm_utils.py  monitor.py  openai_utils.py  parent.py  parsers.py  run_manager.py  test_monitor.py  thread.py  utils.py
lunary/langchain/: __init__.py  callback_handler.py  data_processing.py
lunary/types/: __init__.py
old/: __init__.py  openai_utils.py  parent.py
tests/: agent.py  langchain.py  monitor-openai.py  test-openai.py  test.py  test_basic.py  test_templates.py
