[tool.poetry]
name = "lunary"
version = "1.0.34"
description = "Observability, analytics and evaluations for AI agents and chatbots."
authors = ["lunary <hello@lunary.ai>"]
readme = "README.md"
repository = "https://github.com/lunary-ai/lunary-py"
documentation = "https://lunary.ai/docs/py"
keywords = ["Lunary", "lunary.ai", "Langchain", "AI", "Analytics", "Monitoring"]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
setuptools = "^67.6.2"
tenacity = "^8.2.3"
packaging = "^23.2"
chevron = "^0.14.0"
pyhumps = "^3.8.0"
aiohttp = "^3.9.5"
jsonpickle = "^3.0.4"

[tool.poetry.group.dev.dependencies]
openai = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
